--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "@langchain/openai": "^0.6.7",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/websockets": "^11.1.6",
     "@prisma/client": "^6.14.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.12.2",
