--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:seed": "ts-node prisma/seed.ts",
-    "db:check": "ts-node prisma/check-existing-data.ts"
+    "db:seed": "ts-node prisma/seed-with-data.ts",
+    "db:check": "ts-node prisma/check-existing-data.ts",
+    "db:create-json": "ts-node prisma/create-existing-data-to-json.ts"
   },
   "dependencies": {
     "@langchain/community": "^0.3.51",
@@ -40,6 +41,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
